CIRC-1875 Revert async utils